feature(HARP-3240): configuring dsm container

--- a/package.json
+++ b/package.json
@@ -35,12 +35,17 @@
     "format:bazel": "yarn -s bazel:buildifier --lint=fix --mode=fix",
     "format": "yarn -s format:ts && yarn -s format:bazel",
     "cherry-pick-patch": "ts-node --project tools/cherry-pick-patch/ tools/cherry-pick-patch/cherry-pick-patch.ts",
-    "check-rollup-globals": "ts-node --project scripts/ scripts/check-rollup-globals.ts"
+    "check-rollup-globals": "ts-node --project scripts/ scripts/check-rollup-globals.ts",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook",
+    "dsm-storybook:publish": "dsm-storybook publish",
+    "dsm-storybook:preview": "dsm-storybook preview"
   },
   "version": "9.0.0-next.1",
   "requiredAngularVersion": "^9.0.0-0 || ^10.0.0-0",
   "requiredMDCVersion": "^4.0.0-canary.062ade5c0.0",
   "dependencies": {
+    "@angular-devkit/build-angular": "^0.803.15",
     "@angular/animations": "^9.0.0-next.13",
     "@angular/common": "^9.0.0-next.13",
     "@angular/compiler": "^9.0.0-next.13",
@@ -48,6 +53,7 @@
     "@angular/elements": "^9.0.0-next.13",
     "@angular/forms": "^9.0.0-next.13",
     "@angular/platform-browser": "^9.0.0-next.13",
+    "@invisionapp/dsm-storybook": "^0.0.109",
     "@types/googlemaps": "^3.37.0",
     "@types/youtube": "^0.0.38",
     "@webcomponents/custom-elements": "^1.1.0",
@@ -68,16 +74,26 @@
     "@angular/platform-server": "^9.0.0-next.13",
     "@angular/router": "^9.0.0-next.13",
     "@angular/upgrade": "^9.0.0-next.13",
+    "@babel/core": "^7.4.5",
     "@bazel/bazel": "^0.29.0",
     "@bazel/buildifier": "^0.29.0",
     "@bazel/ibazel": "^0.10.3",
     "@bazel/jasmine": "^0.38.3",
     "@bazel/karma": "^0.38.3",
-    "@bazel/typescript": "^0.38.3",
     "@bazel/protractor": "^0.38.3",
+    "@bazel/typescript": "^0.38.3",
     "@firebase/app-types": "^0.3.2",
     "@octokit/rest": "^16.28.7",
     "@schematics/angular": "^9.0.0-next.15",
+    "@storybook/addon-a11y": "5.2.1",
+    "@storybook/addon-actions": "5.2.1",
+    "@storybook/addon-backgrounds": "5.2.1",
+    "@storybook/addon-centered": "5.2.1",
+    "@storybook/addon-docs": "5.2.1",
+    "@storybook/addon-knobs": "5.2.1",
+    "@storybook/addon-options": "5.2.1",
+    "@storybook/addons": "5.2.1",
+    "@storybook/angular": "5.2.1",
     "@types/browser-sync": "^2.26.1",
     "@types/fs-extra": "^4.0.3",
     "@types/glob": "^5.0.33",
@@ -95,6 +111,7 @@
     "@types/send": "^0.14.5",
     "autoprefixer": "^6.7.6",
     "axe-webdriverjs": "^1.1.1",
+    "babel-loader": "^8.0.6",
     "browser-sync": "^2.26.7",
     "chalk": "^2.4.2",
     "clang-format": "^1.2.4",
