--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   "dependencies": {
     "@angular-devkit/build-angular": "^0.803.15",
     "@angular/animations": "^9.0.0-next.13",
+    "@angular/cdk": "^8.2.3",
     "@angular/common": "^9.0.0-next.13",
     "@angular/compiler": "^9.0.0-next.13",
     "@angular/core": "^9.0.0-next.13",
@@ -154,6 +155,7 @@
     "node-sass": "^4.12.0",
     "parse5": "^5.0.0",
     "protractor": "^5.4.2",
+    "raw-loader": "1.0.0",
     "resolve-bin": "^0.4.0",
     "rollup": "^0.56.3",
     "rollup-plugin-alias": "^1.4.0",
